# kiro-pants-power

./: POWER.md  README.md  mcp.json  power.json  pyproject.toml  requirements.txt
.kiro/settings/: mcp.json
.kiro/specs/enhanced-pants-output-capture/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/pants-devcontainer-power/: .config  .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/pants-target-validation/: .config.kiro  agent-feedback.md  design.md  pants-concepts.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: debugging-power-changes.md  intent-api-migration-guide.md  intent-api-troubleshooting.md  intent-api-usage-guide.md  kiro-pants-power-feedback.md  pants-output-capture-details.md
powers/pants-devcontainer/: POWER.md
powers/pants-devcontainer-power/: README.md  mcp.json
src/: __init__.py  command_executor.py  container_lifecycle.py  container_manager.py  formatters.py  models.py  output_buffer.py  pants_command_builder.py  pants_commands.py  server.py  workflow_orchestrator.py  workflow_tools.py
src/formatters/: __init__.py  config_formatter.py  enhanced_error_formatter.py
src/intent/: __init__.py  configuration.py  data_models.py  error_translator.py  integration.py  intent_mapper.py  monitoring.py  path_validator.py  tool_executor.py  tool_schemas.py
src/parsers/: __init__.py  config_parser.py  coverage_parser.py  junit_parser.py  mypy_parser.py  parser_router.py  pytest_parser.py  sandbox_extractor.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/fixtures/sample_configs/: invalid_syntax.toml  invalid_type.toml  minimal.toml  valid_basic.toml  valid_complex.toml  valid_with_comments.toml
tests/integration/: test_integration_end_to_end.py  test_intent_mapper_integration.py  test_mcp_server.py
tests/performance/: test_performance.py
tests/property/: EXAMPLES.md  README.md  __init__.py  generators.py  test_defaults_properties.py  test_generators_smoke.py
tests/unit/: __init__.py  test_command_executor.py  test_command_executor_buffering.py  test_config_formatter.py  test_config_parser.py  test_config_roundtrip.py  test_configuration.py  test_container_lifecycle.py  test_container_manager.py  test_coverage_parser.py  test_data_models.py  test_enhanced_error_formatter.py  test_error_translator.py  test_formatters.py  test_intent_mapper.py  test_junit_parser.py  test_models.py  test_monitoring.py  test_mypy_parser.py  test_output_buffer.py  test_pants_command_builder.py  test_pants_commands.py  test_parser_router.py  test_path_validator.py  test_pytest_parser.py  test_sandbox_extractor.py  test_server.py  test_tool_executor.py  test_tool_schemas.py  test_workflow_orchestrator.py  test_workflow_tools.py
(+29 files in other folders)
